felix_ontanon/session01/exercise01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wpblog
    component: blog
spec:
  selector:
    matchLabels:
      component: blog
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: wpblog
        component: blog
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:latest
        ports:
        - containerPort: 80
          name: http
        env: # Vars from https://github.com/bitnami/bitnami-docker-wordpress#configuration
        - name: MARIADB_HOST
          value: mariadb.exercise-01 # Internal Endpoint automatically generated by mariadb service
        - name: WORDPRESS_DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-name
        - name: WORDPRESS_DATABASE_USER
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: db-blog-user
        - name: WORDPRESS_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: blogsecrets
              key: db-blog-password
        - name: WORDPRESS_BLOG_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-name
        - name: WORDPRESS_USERNAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-user
        - name: WORDPRESS_PASSWORD
          valueFrom:
            secretKeyRef:
              name: blogsecrets
              key: wp-blog-password
        - name: WORDPRESS_EMAIL
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-user-email
        - name: WORDPRESS_FIRST_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-user-firstname
        - name: WORDPRESS_LAST_NAME
          valueFrom:
            configMapKeyRef:
              name: blogconfig
              key: wp-blog-user-lastname
