felix_ontanon/session01/exercise01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: wpblog
    component: database
spec:
  type: ClusterIP
  ports:
  - name: mysqlport
    port: 3306
    targetPort: 3306
  selector:
    component: database
