felix_ontanon/session01/exercise01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wpblog
    component: blog
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    component: blog
